--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,13 @@
 <div class="container">
+<div class="row">
+  <div class="col s12 text-center">
+    {{#md-card title="Under construction"}}
+      {{#md-card-content}}
+        I'll get around to this eventually
+        {{/md-card-content}}
+    {{/md-card}}
+  </div>
+</div>
 {{outlet}}
 </div>
 
