--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
-<h2 id="title">Welcome to Ember.js</h2>
-
+<div class="container">
 {{outlet}}
+</div>
 
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
