--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,7 +3,7 @@
   <div class="col s12 text-center">
     {{#md-card title="Under construction"}}
       {{#md-card-content}}
-        I'll get around to this in a bit
+        I'll get around to this as soon as I have time
         {{/md-card-content}}
     {{/md-card}}
   </div>
