--- a/app/templates/components/main-nav.hbs
+++ b/app/templates/components/main-nav.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Mike North</a>
+    {{link-to 'Mike North' 'index' class="brand-logo"}}
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <ul class="right hide-on-med-and-down">
       {{yield}}
