--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,8 @@
 <div class="navbar-fixed">
 {{#main-nav class="deep-purple"}}
+  {{#link-to 'index' tagName="li"}}
+    <a class="fa fa-user">About Me</a>
+  {{/link-to}}
   {{#link-to 'speaking' tagName="li"}}
     <a class="fa fa-comment">Speaking</a>
   {{/link-to}}
@@ -10,3 +13,45 @@
 
 {{!-- ember-cli-materialize modal container --}}
 {{md-modal-container}}
+
+<footer class="page-footer deep-purple">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Footer Content</h5>
+        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+      </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Social</h5>
+        <ul>
+          <li>
+            <a class="grey-text text-lighten-3 socialicon" target="_blank" href="http://twitter.com/michaellnorth">
+              {{fa-icon 'twitter inverse'}} @MichaelLNorth
+            </a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3 socialicon" target="_blank" href="http://github.com/truenorth">
+              {{fa-icon 'github inverse'}} truenorth
+            </a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3 socialicon" target="_blank" href="http://linked.in/mike.l.north">
+              {{fa-icon 'linkedin inverse'}}mike.l.north
+            </a>
+          </li>
+          <li>
+            <a class="grey-text text-lighten-3 socialicon" target="_blank" href="http://facebook.com/mike.l.north">
+              {{fa-icon 'facebook inverse'}}mike.l.north
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+    © 2015 Mike North
+    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+    </div>
+  </div>
+</footer>
