--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,19 @@
-<h2>index</h2>
+<div class="container">
+  <div class="row">
+    <div class="col s12">
+      <div class="card horizontal-with-image">
+        <div class="card-image-container">
+        <div class="card-image">
+          <img src="/img/mike_north_headshot_medium.jpg" alt="">
+        </div>
+        </div>
+        <div class="card-content">
+          <div class="card-title grey-text text-darken-3">Hello</div>
+          <p>I'm a software engineer working in Silicon Valley. Lately I've been working with JavaScript a lot, but I throughout my career I've had the pleasure of working with a broad array of technologies in a wide range of fields</p>
+
+          <p>My Passion is working with product teams and/or entrepreneurs, to bring great ideas to life.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
