--- a/app/templates/speaking.hbs
+++ b/app/templates/speaking.hbs
@@ -1,1 +1,9 @@
-<h2>Speaking</h2>
+<div class="container m-t-50">
+  <div class="row">
+    {{#md-tabs selected=selectedTabId}}
+        {{md-tab value='past' title='Past'}}
+        {{md-tab value='upcoming' title='Upcoming'}}
+    {{/md-tabs}}
+  </div>
+</div>
+{{liquid-outlet}}
