--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,43 @@
-@import 'materialize';
+@charset "UTF-8";
+
+// Mixins
+@import "components/prefixer";
+@import "components/mixins";
+@import "components/color";
+
+$primary-color: color("deep-purple", "base");
+
+// Variables;
+@import "components/variables";
+
+// Reset
+@import "components/normalize";
+
+// components
+@import "components/global";
+@import "components/icons-material-design";
+@import "components/grid";
+@import "components/navbar";
+@import "components/roboto";
+@import "components/typography";
+@import "components/cards";
+@import "components/toast";
+@import "components/tabs";
+@import "components/tooltip";
+@import "components/buttons";
+@import "components/dropdown";
+@import "components/waves";
+@import "components/modal";
+@import "components/collapsible";
+@import "components/materialbox";
+@import "components/form";
+@import "components/table_of_contents";
+@import "components/sideNav";
+@import "components/preloader";
+@import "components/slider";
+@import "components/date_picker/default.scss";
+@import "components/date_picker/default.date.scss";
+@import "components/date_picker/default.time.scss";
 
 /* FIXME: Workaround for https://github.com/Dogfalo/materialize/issues/1079 */
 @each $mdi-icon-name, $mdi-icon-value in $mdi-list-icons {
@@ -21,7 +60,7 @@
 }
 
 $card_horizontal_image_width: 300px;
-.card.horizontal-with-image {
+.card.md-horiz-image-card {
   overflow: hidden;
   .card-image-container {
     max-width: $card_horizontal_image_width;
@@ -38,12 +77,16 @@ $card_horizontal_image_width: 300px;
       margin-top: 20px;
       font-size: 1.2rem;
     }
+    ul li {
+      margin-left: 20px;
+      list-style: disc outside;
+    }
   }
 }
 
 
 @media only screen and (max-width : 700px) {
-  .card.horizontal-with-image {
+  .card.md-horiz-image-card {
     .card-image-container {
       float: none;
       max-width: none;
@@ -58,7 +101,7 @@ $card_horizontal_image_width: 300px;
 
       p {
         margin-top: 20px;
-        font-size: 1.2rem;
+        font-size: 1.1rem;
       }
     }
   }
@@ -70,9 +113,11 @@ $card_horizontal_image_width: 300px;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background: #eee;
   }
 
   main {
+    margin-top: 40px;
     flex: 1 0 auto;
   }
 
