--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,9 +5,9 @@
         class="z-depth-2"
         image="/img/mike_north_headshot_medium.jpg"}}
         <div class="card-title grey-text text-darken-3">Hello</div>
-        <p>I'm a software engineer working in Silicon Valley. Lately I've been working with JavaScript a lot, but I throughout my career I've had the pleasure of working with a broad array of technologies in a wide range of fields</p>
+        <p>I'm a Principal Software Engineer and UI Engineerind Lead working in the Silicon Valley. Lately I've been working with JavaScript a lot, but I throughout my career I've had the pleasure of working with a broad array of technologies in a wide range of fields.</p>
 
-        <p>My Passion is working with product teams and/or entrepreneurs, to bring great ideas to life.</p>
+        <p>My passion is working with product teams and/or entrepreneurs, to bring great ideas to life.</p>
       {{/md-horiz-image-card}}
     </div>
   </div>
