part of implementation of blog

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,6 +4,8 @@
   {{/link-to}}
   {{#link-to 'speaking' tagName="li"}} <a class="fa fa-comment">Speaking</a>
   {{/link-to}}
+{{!--   {{#link-to 'blog' tagName="li"}} <a class="fa mdi-av-mic">Blog</a>
+  {{/link-to}} --}}
 {{!--   {{#link-to 'code' tagName="li"}} <a class="fa fa-code">Code</a>
   {{/link-to}} --}}
 {{/main-nav}}
