move WGE talk to previous talk section

--- a/app/templates/speaking/past.hbs
+++ b/app/templates/speaking/past.hbs
@@ -2,7 +2,26 @@
   <div class="row">
 
 
+    <div class="col s12">
+      {{#md-horiz-image-card
+        image="/img/wicked_good_ember.png"}}
 
+        <div class="row">
+          <div class="col s12 l9">
+            <a href="http://www.wickedgoodember.com">
+              <h4>Wicked Good Ember 2015</h4>
+            </a>
+          </div>
+          <div class="col s12 l3">
+            <span class="badge right deep-purple white-text">Jun 16, 2015</span>
+          </div>
+        </div>
+
+        <h5>Compose all the things</h5>
+        <p>As ember is being used for the foundation of even more ambitious web applications, the appeal of leveraging less code to do more has grown. Keeping composability in mind will allow teams to effectively build their own layers of “boilerplate” on top of the framework, and build apps high quality and velocity.
+In this talk, we’ll dive into composable components, computed property macros and tests to explore how investment in generic code can pay off in terms of high degrees of maintainability, testability and extensibility.</p>
+      {{/md-horiz-image-card}}
+    </div>
 
     <div class="col s12">
       {{#md-horiz-image-card
