--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,53 +1,15 @@
-@charset "UTF-8";
+// Example app.scss
+@import 'components/color';
+@import 'components/variables';
 
-// Mixins
-@import "components/prefixer";
-@import "components/mixins";
-@import "components/color";
-
+// Custom color settings go here
 $primary-color: color("deep-purple", "base");
 
-// Variables;
-@import "components/variables";
-
-// Reset
-@import "components/normalize";
-
-// components
-@import "components/global";
-@import "components/icons-material-design";
-@import "components/grid";
-@import "components/navbar";
-@import "components/roboto";
-@import "components/typography";
-@import "components/cards";
-@import "components/toast";
-@import "components/tabs";
-@import "components/tooltip";
-@import "components/buttons";
-@import "components/dropdown";
-@import "components/waves";
-@import "components/modal";
-@import "components/collapsible";
-@import "components/materialbox";
-@import "components/form";
-@import "components/table_of_contents";
-@import "components/sideNav";
-@import "components/preloader";
-@import "components/slider";
-@import "components/date_picker/default.scss";
-@import "components/date_picker/default.date.scss";
-@import "components/date_picker/default.time.scss";
+@import 'materialize';
+@import 'ember-cli-materialize';
 
 @import "top-nav";
 @import "md-horiz-image-card";
-
-/* FIXME: Workaround for https://github.com/Dogfalo/materialize/issues/1079 */
-@each $mdi-icon-name, $mdi-icon-value in $mdi-list-icons {
-  .#{$mdi-prefix}#{$mdi-icon-name}:before {
-    content: "\""+ $mdi-icon-value +"\"";
-  }
-}
 
 $main-top-margin: 40px;
 
