First pass at new version

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,13 +1,2 @@
-<div class="container">
-  <div class="row">
-    <div class="col s12">
-      {{#md-horiz-image-card
-        image="/img/mike_north_headshot_medium.jpg"}}
-        <div class="card-title grey-text text-darken-3">Hello</div>
-        <p>I'm a Principal Software Engineer and UI Engineerind Lead working in the Silicon Valley. Lately I've been working with JavaScript a lot, but I throughout my career I've had the pleasure of working with a broad array of technologies in a wide range of fields.</p>
-
-        <p>My passion is working with product teams and/or entrepreneurs, to bring great ideas to life.</p>
-      {{/md-horiz-image-card}}
-    </div>
-  </div>
-</div>
+<h1>About me</h1>
+{{outlet}}
