--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,59 +1,27 @@
-// Example app.scss
-@import 'components/color';
-@import 'components/variables';
+@import 'material-design-lite';
 
-// Custom color settings go here
-$primary-color: color("deep-purple", "base");
-
-@import 'materialize';
-@import 'ember-cli-materialize';
-
-@import "top-nav";
-@import "md-horiz-image-card";
-
-$main-top-margin: 40px;
-
-.text-center {
-  text-align: center;
+.layout-transparent {
+  background: url('/img/at-laptop.jpg') center / cover;
 }
 
+.mdl-layout__header-row .mdl-navigation__link {
+  line-height: 36px;
+}
+
+.mdl-navigation__link.active {
+  position: relative;
+  top: 1px;
+  border-bottom: 3px solid white;
+}
 
 body {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
-}
-
-main {
-  margin-top: $main-top-margin;
-  flex: 1 0 auto;
+  margin: 0;
+  padding: 0;
 }
 
 
-
-footer {
-  .socialicon .fa {
-    width: 10px;
-    margin-right: 10px;
+.mike-content {
+  h1 {
+    color: white;
   }
 }
-
-.liquid-container {
-  height: 100%;
-
-  position: relative;
-  overflow: initial;
-
-  -webkit-transform: initial;
-  -moz-transform:    initial;
-  transform:         initial;
-}
-
-.speaking {
-  margin-top: 40px;
-}
-
-.brand-logo {
-  white-space: nowrap;
-}
-
