--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,2 +1,10 @@
-<h1>Contact</h1>
-{{outlet}}
+<h1 class='text-white'>Contact</h1>
+
+<ul class="contact-methods">
+  <li>Twitter: <a href="https://twitter.com/michaellnorth" target="_blank">@MichaelLNorth</a></li>
+  <li>LinkedIn: <a href="https://linkedin.com/in/northm" target="_blank">Mike North</a></li>
+  <li>Instagram: <a href="https://instagram.com/officetoday" target="_blank">@OfficeToday</a></li>
+  <li>Github: <a href="https://github.com/mike-north" target="_blank">mike-north</a></li>
+  <li>Whats App: <a href="whatsapp://send?abid=8144412418&text=Hi%20Mike" target="_blank">click here</a></li>
+  <li>LINE: mike_north</li>
+</ul>
