--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,2 +1,12 @@
-<h1>About me</h1>
+<h1 class='text-white'>About me</h1>
+
+<p class='text-white'>
+  I build products that help make peoples' lives easier. Sometimes this means writing code, and sometimes mentoring and training teams.
+</p>
+
+<p class="text-white">
+  I was trained as a Mechanical Engineer and a Physicist at Carnegie Mellon University, and now I bring that technical knowledge to bear in the software world.
+</p>
+
+<p class="text-white">Years ago, I set a goal for myself that I could travel the world while doing what I love -- and now I get to live that dream! I am the CTO of <a href="http://levantofinancial.com" target="_blank">Levanto Financial</a>.</p>
 {{outlet}}
