--- a/app/templates/travel.hbs
+++ b/app/templates/travel.hbs
@@ -1,2 +1,11 @@
-<h1>Travel</h1>
-{{outlet}}
+<h1 class="text-white">Travel</h1>
+
+<p class="text-white">
+  I'm living my dream, of doing what I love while working remotely all over the world.
+</p>
+
+
+{{#each model as |trip|}}
+  {{x-trip trip=trip}}
+{{/each}}
+
