--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,7 +6,7 @@
   <div class="mike-content">
   <div class="mdl-grid content-container">
     <div class="mdl-cell mdl-cell--12-col white-text">
-       {{liquid-outlet}}
+       {{outlet}}
     </div>
   </div>
   </div>
