--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,5 +10,22 @@
     </div>
   </div>
   </div>
-{{/mdl-nav}}
 
+  {{#mdl-mini-footer title='Mike North © 2016 All Rights Reserved'}}
+
+    {{#mdl-footer-linklist}}
+        <li><a href="https://twitter.com/MichaelLNorth" class="twitter-follow-button" data-show-count="false">Follow @MichaelLNorth</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></li>
+        <li><script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+<script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/northm" data-format="hover" data-text="Mike North"></script></li>
+
+<!-- Place this tag right after the last button or just before your close body tag. -->
+<script async defer id="github-bjs" src="https://buttons.github.io/buttons.js"></script>
+    {{/mdl-footer-linklist}}
+    {{#mdl-footer-linklist}}
+    <li><span class="ig-follow" data-id="c1b08de36b" data-handle="officetoday" data-count="true" data-size="small" data-username="true"></span></li>
+        <li><script>(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src="//x.instagramfollowbutton.com/follow.js";s.parentNode.insertBefore(g,s);}(document,"script"));</script>
+<a class="github-button" href="https://github.com/mike-north" data-style="mega" data-count-href="/mike-north/followers" data-count-api="/users/mike-north#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @mike-north on GitHub">Follow @mike-north</a></li>
+    {{/mdl-footer-linklist}}
+  {{/mdl-mini-footer}}
+{{/mdl-nav}}
