--- a/app/templates/travel.hbs
+++ b/app/templates/travel.hbs
@@ -4,8 +4,4 @@
   I'm living my dream, of doing what I love while working remotely all over the world.
 </p>
 
-
-{{#each model as |trip|}}
-  {{x-trip trip=trip}}
-{{/each}}
-
+<iframe width="100%" height="500" src="https://nomadtrips.co/embed/michaellnorth" scrolling="no" frameborder="0" allowfullscreen></iframe>
