--- a/app/templates/components/x-talk.hbs
+++ b/app/templates/components/x-talk.hbs
@@ -1,10 +1,15 @@
-<div class="title">{{talk.name}}</div>
+<div class="title">
+  {{talk.name}}
+  {{#if isUpcoming}}
+    <i class="material-icons">schedule</i>
+  {{/if}}
+</div>
 <div class="venue-info">
   <a href={{talk.eventURL}} class="venue-link" target="_blank">
     {{talk.eventName}}
   </a>
   <span class="event-date">
-    {{moment-format talk.date 'MMM DD, YYYY'}}
+    {{moment-format mDate 'MMM DD, YYYY'}}
   </span>
 </div>
 <ul class="tags">
